employee's missing large photo alignment fixed

--- a/common/css/base/_employee-info.sass
+++ b/common/css/base/_employee-info.sass
@@ -48,13 +48,13 @@
 .employee-info__photo
   flex: 0 0 240px
   width: 240px
+  margin-right: 2em
 
 .employee-info__photo-large
   width: 240px
 
 .employee-info__data
   flex: 1 1 auto
-  padding-left: 2rem
 
 .employee-info__phone
   font-size: 18px
